--- a/src/main/java/de/mosmann/HomePage.html
+++ b/src/main/java/de/mosmann/HomePage.html
@@ -14,6 +14,11 @@
 			</div>
 		</div>
 		<div id="bd">
+			<h2>Take a turn</h2>
+			<p>
+				You did it. Follow the curse on a <a wicket:id="overview">different page</a>.
+			</p>
+			
 			<h2>Congratulations!</h2>
 			<p>
 				Your quick start works! This project is especially useful to
