--- a/src/main/java/de/mosmann/topics/basics/forms/FormsPage.html
+++ b/src/main/java/de/mosmann/topics/basics/forms/FormsPage.html
@@ -1,5 +1,12 @@
 <wicket:extend>
 	<div wicket:id="feedback"></div>
 	
+	<h2>Magic</h2>
 	<wicket:container wicket:id="magic"></wicket:container>
+	
+	<h2>Property</h2>
+	<wicket:container wicket:id="property"></wicket:container>
+
+	<h2>Typesafe</h2>
+	<wicket:container wicket:id="typesafe"></wicket:container>
 </wicket:extend>
