--- a/src/main/java/de/mosmann/HomePage.html
+++ b/src/main/java/de/mosmann/HomePage.html
@@ -16,7 +16,7 @@
 		<div id="bd">
 			<h2>Take a turn</h2>
 			<p>
-				You did it. Follow the curse on a <a wicket:id="overview">different page</a>.
+				You did it. Follow the course on a <a wicket:id="overview">different page</a>.
 			</p>
 			
 			<h2>Congratulations!</h2>
