--- a/src/main/java/de/mosmann/topics/basics/markupmagic/SimplePanel.html
+++ b/src/main/java/de/mosmann/topics/basics/markupmagic/SimplePanel.html
@@ -1,3 +1,10 @@
+<wicket:head>
+	<style>
+		div {
+			margin: 2px;
+		}
+	</style>
+</wicket:head>
 <wicket:panel>
 	<div style="border:3px solid green;">Simple</div>
 </wicket:panel>
