--- a/src/main/java/de/mosmann/topics/basics/validations/FormPanel.html
+++ b/src/main/java/de/mosmann/topics/basics/validations/FormPanel.html
@@ -1,13 +1,21 @@
+<wicket:head>
+<style>
+input.error {
+	color: red;
+	border: 2px solid red;
+}
+</style>
+</wicket:head>
 <wicket:panel>
 	<form wicket:id="form">
 		<input type="submit" style="visibility: hidden;"/>
 		<fieldset>
-			<div wicket:id="nameBorder">
-				<label>Name</label><input wicket:id="name"/>
-			</div>
+			<label>Name</label><input wicket:id="name"/>
 			<label>Size</label><input wicket:id="size"/><br>
 			<label>Birthday</label><input wicket:id="birthday"/><br>
 			<input wicket:id="submit" type="submit">
 		</fieldset>
+		
 	</form>
+	<a wicket:id="lo">errorrrrorrr</a>
 </wicket:panel>
