--- a/src/main/java/de/mosmann/usermgmt/NewUserPanel.html
+++ b/src/main/java/de/mosmann/usermgmt/NewUserPanel.html
@@ -1,3 +1,7 @@
 <wicket:panel>
-	
+	<form wicket:id="form">
+		Name <input wicket:id="name"><br/>
+		
+		<input type="submit" value="Submit">
+	</form>
 </wicket:panel>
