--- a/src/main/java/de/mosmann/usermgmt/UserMgmtPage.html
+++ b/src/main/java/de/mosmann/usermgmt/UserMgmtPage.html
@@ -1,4 +1,6 @@
 <wicket:extend>
 	<h2>User Management</h2>
+	<wicket:container wicket:id="feedback"></wicket:container>
 	<div wicket:id="new"></div>
+	<wicket:container wicket:id="feedback2"></wicket:container>
 </wicket:extend>
