--- a/src/main/java/de/mosmann/usermgmt/NewDummyPanel.html
+++ b/src/main/java/de/mosmann/usermgmt/NewDummyPanel.html
@@ -2,6 +2,6 @@
 	<form wicket:id="form">
 		Name <input wicket:id="name"><br/>
 		
-		<input type="submit" value="Submit">
+		<a wicket:id="submit">Neu</a>
 	</form>
 </wicket:panel>
