--- a/src/main/java/de/mosmann/topics/forms/FormValidationBorder.html
+++ b/src/main/java/de/mosmann/topics/forms/FormValidationBorder.html
@@ -1,6 +1,6 @@
 <wicket:border>
 	<fieldset wicket:id="box" class="fooo">
-		<wicket:body/>
+		<wicket:body/><span>(Info)</span>
 		<div wicket:id="feedback"></div>
 	</fieldset>
 </wicket:border>
