--- a/src/main/java/de/mosmann/loginmgmt/LoginBasePage.html
+++ b/src/main/java/de/mosmann/loginmgmt/LoginBasePage.html
@@ -10,7 +10,10 @@
 	<body>
 		<table style="width: 600px; margin: auto; ">
 			<tr>
-				<td style="width: 100px; background-color: #f0f0f0"><wicket:container wicket:id="nav"></wicket:container></td>
+				<td style="width: 100px; background-color: #f0f0f0">
+					<wicket:container wicket:id="logout"></wicket:container>
+					<wicket:container wicket:id="nav"></wicket:container>
+				</td>
 				<td><wicket:child /></td>
 			</tr>
 		</table>
