--- a/src/main/java/de/mosmann/topics/forms/FormValidationComponentsPage.html
+++ b/src/main/java/de/mosmann/topics/forms/FormValidationComponentsPage.html
@@ -20,6 +20,9 @@
 		<wicket:container wicket:id="box3">
 			<label>Alter</label><input wicket:id="alter">
 		</wicket:container>
+		<wicket:container wicket:id="box4">
+			<label>Geld, Alter</label><input wicket:id="money">
+		</wicket:container>
 		<input type="submit" value="Absenden">
 	</form>
 </wicket:extend>
